Dark mode bug fixes

--- a/public/css/high-contrast.less
+++ b/public/css/high-contrast.less
@@ -261,4 +261,13 @@ html.contrast {
             }
         }
     }
+
+    // contact us 
+    section#title {
+        .container {
+            .border-top {
+                filter: var(--bwImageFilter);
+            }
+        }
+    }
 }
